# D30-linux

./: README.md
app_demo/: CMakeLists.txt  ympkg.xml
app_demo/inc/: Disp.h  osal.h
app_demo/inc/dspread/: emvdeviceimpl.h  proj_define.h
app_demo/pkg_bat/: recompile.bat
app_demo/src/: appinc.h  main.c  typedefine.h
app_demo/src/business/: business.c  business.h  businessUtil.c  businessUtil.h  emvImpl.c  emvimpl.h  record.c  record.h  utility.c
app_demo/src/http/: app_request.c  app_server.c
app_demo/src/lvgl/: lv_conf.h
app_demo/src/lvgl/porting/: lv_port_disp.c  lv_port_indev.c
app_demo/src/lvgl/src/extra/themes/default/: lv_theme_default.c
app_demo/src/lvgl/src/font/: ali_bold_14.c  ali_bold_20.c  ali_middle_14.c  ali_middle_18.c  ali_middle_24.c  ali_middle_36.c  ali_middle_42.c  ali_regular_14.c  lv_font.h  lv_font.mk  lv_font_arial_14.c  lv_font_arial_16.c  lv_font_arial_24.c  lv_font_arial_36.c  lv_font_arial_48.c
app_demo/src/network/: cmacro.h  socket.c  socket.h
app_demo/src/ota/: ota.c  ota.h
app_demo/src/ui/: task_handle.c  task_handle.h  ui_about.c  ui_emvMutilAppSel.c  ui_emv_disp.c  ui_emv_disp.h  ui_enter_amount.c  ui_enter_pin.c  ui_main.c  ui_main.h  ui_misc.c  ui_misc.h  ui_payment_result.c  ui_qrcode.c  ui_read_card.c  ui_scan_code.c  ui_select_paytype.c  ui_setting.c  ui_setting_backlight.c  ui_setting_net.c  ui_setting_time.c  ui_signature.c  ui_utils.c  ui_utils.h  ui_waters.c  ui_wifi.c  ui_wifi.h
app_demo/src/utils/: debug.h  memtrack.c  memtrack.h  ped_test.c  ped_test.h
tools/FirmwareDownload/: pcba.ini
tools/UsbFactoryTool_1.0.0.19/exe/: config.ini
